Groco. To be continued...

--- a/style.css
+++ b/style.css
@@ -457,10 +457,16 @@ header .login-form.active{
     background-color: var(--orange);
  }
 
+ .categories {
+    background: #eee;
+    padding: 2rem 2rem;
+ }
  .categories .box-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(26rem, 1fr));
-    gap: 1.5rem;
+    background: #eee;
+    grid-template-columns: repeat(4,1fr);
+    gap: 2rem;
+    margin-top: 2rem;
 }
 .categories .box-container .box{
    padding: 3rem 2rem;
@@ -470,6 +476,7 @@ header .login-form.active{
    outline: var(--outline);
    outline-offset: -1rem;
    text-align: center;
+   margin-bottom: 10px;
 }
 .categories .box-container .box:hover{
     outline: var(--outline-hover);
@@ -489,4 +496,33 @@ header .login-form.active{
     color: var(--light-colour);
     line-height:1.8;
     padding: 1rem 0;
+}
+
+.categories .heading {
+    font-size: 25px;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.categories .heading span {
+    color: rgb(255, 255, 255);
+    display: inline-block;
+    clip-path: polygon(100% 0px, 93% 50%, 100% 99%, 0% 100%, 7% 50%, 0% 0%);
+    background: var(--orange);
+    padding: 0.5rem 3rem;
+}
+
+.categories .box-container .box a {
+    font-size: 15px;
+    text-decoration: none;
+    color: var(--black);
+    border: 2px solid #333;
+    border-radius: 5px;
+    padding: 5px 10px;
+}
+
+
+.categories .box-container .box a:hover {
+    background:var(--orange);
+    
 }
